# sapbert

./: pyproject.toml
notebooks/: inference_on_snomed.ipynb
sapbert/evaluation/: eval.py  utils.py
sapbert/inference/: Snomed.py
sapbert/src/: __init__.py  data_loader.py  metric_learning.py  model_wrapper.py
sapbert/training/: train.py
scripts/: README.md  pretrain.sh  xling_train.sh
