[tool.poetry]
name = "sapbert"
version = "0.1.0"
description = ""
authors = ["Cambridge Language Technology Lab <http://ltl.mml.cam.ac.uk/>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
torch = "^1.11.0"
transformers = "^4.17.0"
networkx = "^2.7.1"
pytorch-metric-learning = "^1.2.1"
numpy = "^1.22.3"
tqdm = "^4.63.0"
jupyter = "^1.0.0"
wandb = "^0.12.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
